# libqcnpuperf

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  qcnpuperf.pc.in
inc/: qcom_dsp.h
src/: dspquery_stub.c  qcom_dsp.c  qcom_dsp_arch.c  qcom_dsp_priv.h
